features are done

--- a/index.html
+++ b/index.html
@@ -10,37 +10,82 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
       integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"/>
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <!-- tailwind css -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
+    <!-- banner area -->
     <div
-      class="parent-div min-h-[200px] max-w-[1140px] mx-auto flex flex-col md:flex-row ">
-      <div class="left-div pt-[65px] ">
+      class="parent-div min-h-[200px] max-w-[1140px] mx-auto flex flex-col md:flex-row pb-[130px]"
+    >
+      <div class="left-div pt-[65px]">
         <h1 class="text-[78px] leading-[100px] font-extrabold">
           It's good <br />
-          tea time at The <br>Tea House
+          tea time at The <br />Tea House
         </h1>
         <p class="text-[18px] my-[10px] pl-[5px] text-neutral-500">
           Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your
           Taste Buds.
         </p>
-        <button class=" bg-red-500 text-[20px] button py-[10px] px-[30px] rounded-[10px] ml-[10px] text-white flex"  >Explore More <img src="./images/arrow.png" alt="" class="w-[24px] h-[24px] mt-[5px] ml-[10px]"></button>
+        <button
+          class=" text-[20px] button py-[10px] px-[30px] rounded-[10px] ml-[10px] text-white flex bg-gradient-to-r from-[#FF8938] to-[#FF0000] cursor-pointer"
+        >
+         <span>  Explore More</span>
+         <span class="-rotate-45"> <i class="fa-solid fa-arrow-right"></i></span>
+        </button>
       </div>
       <div class="right-div pt-[150px] relative">
         <img src="./images/banner.png" alt="banner img" />
-        <div class="floating-div bg-white  max-w-[300px] h-[100px] flex items-center justify-center rounded-[10px] absolute bottom-[20px] left-[40px] shadow-md">
+        <div
+          class="floating-div bg-white max-w-[300px] h-[100px] flex items-center justify-center rounded-[10px] absolute bottom-[20px] left-[40px] shadow-md"
+        >
           <div class="img">
-            <i class="fa-solid fa-star text-amber-400 text-[48px] pt-[10px] pl-[25px]"></i>
+            <i
+              class="fa-solid fa-star text-amber-400 text-[48px] pt-[10px] pl-[25px]"
+            ></i>
           </div>
-          <div class="content  pl-[30px] pr-[30px]">
+          <div class="content pl-[30px] pr-[30px]">
             <h2 class="font-extrabold text-[30px]">5.00</h2>
-            <p class="font-semibold text-[16px] text-neutral-500">Trust Pilot Ratings</p>
+            <p class="font-semibold text-[16px] text-neutral-500">
+              Trust Pilot Ratings
+            </p>
           </div>
         </div>
       </div>
     </div>
+    <!-- banner area end -->
+     <!-- our features area -->
+      <section class="min-h-[250px] max-w-[1140px] mx-auto">
+        <h1 class="text-5xl font-extrabold text-center">Our Featured Products</h1>
+        <p class="text-center text-[16px] text-[#777777] px-[120px] mt-[37px] mb-[50px]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      
+        <div class="cards  grid gird-cols-1 justify-center gap-[20px] md:grid-cols-4 ">
+          <div class="card max-w-[240px] bg-gradient-to-b from-[#F4F4F4] to-[#f4f4f400] rounded-lg">
+           <img src="./images/tea-1.png" alt="" class="mx-auto" />
+            <h1 class="text-center font-extrabold text-[25px]">Milk Tea</h1>
+            <p class="text-center font-semibold text-[16px] text-[#777777] mx-[10px]">Creamer could be replaced by fresh milk</p>
+          </div>
+          <div class="card max-w-[240px]  bg-gradient-to-b from-[#F4F4F4] to-[#f4f4f400] rounded-lg">
+           <img src="./images/tea-2.png" alt="" class="mx-auto" />
+            <h1 class="text-center font-extrabold text-[25px]">Milk Tea</h1>
+            <p class="text-center font-semibold text-[16px] text-[#777777] mx-[10px]">Creamer could be replaced by fresh milk</p>
+          </div>
+          <div class="card max-w-[240px] bg-gradient-to-b from-[#F4F4F4] to-[#f4f4f400] rounded-lg">
+           <img src="./images/tea-3.png" alt="" class="mx-auto" />
+            <h1 class="text-center font-extrabold text-[25px]">Milk Tea</h1>
+            <p class="text-center font-semibold text-[16px] text-[#777777] mx-[10px]">Creamer could be replaced by fresh milk</p>
+          </div>
+          <div class="card max-w-[240px] bg-gradient-to-b from-[#F4F4F4] to-[#f4f4f400] rounded-lg">
+           <img src="./images/tea-4.png" alt="" class="mx-auto" />
+            <h1 class="text-center font-extrabold text-[25px]">Milk Tea</h1>
+            <p class="text-center font-semibold text-[16px] text-[#777777] mx-[10px] my-1">Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+      
+      </section>
+     <!-- our features area -->
   </body>
 </html>
